# kaggle-host-llm

./: .gitignore  README.md  pyproject.toml
docs/: kaggle_worker_runbook.md  setup_to_external_client.md
notebooks/: kaggle_deepseek_ocr2_worker.ipynb  kaggle_paddleocr_worker.ipynb  kaggle_qwen_worker.ipynb
scripts/: check_public_gateway.py  kaggle_event_log.py  manage_kaggle_kernel.py  push_kaggle_ocr_worker.py  push_kaggle_worker.py  stage_kaggle_ocr_worker.py  stage_kaggle_worker.py  start_named_tunnel.py  start_quick_tunnel.py  test_chat_pipeline.py  test_ocr_pipeline.py
src/kaggle_host_llm/: __init__.py  app.py  chat_ui.py  dispatcher.py  env_loader.py  groq_client.py  kaggle_log.py  main.py  ocr_models.py  openai_models.py  registry.py  settings.py
tests/: test_gateway.py
