[project]
name = "kaggle-host-llm"
version = "0.1.0"
description = "OpenAI-compatible gateway for best-effort Kaggle notebook LLM workers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[project.scripts]
kaggle-host-llm = "kaggle_host_llm.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-p", "no:launch_testing"]
